# website

./: 404.html  CNAME  index.html  mkdocs.yml  pyproject.toml
blog/: index.html
blog/2024/11/01/first-post/: index.html
blog/2024/12/20/understanding-and-building-react-agents/: index.html
blog/2025/01/01/a-comprehensive-guide-on-tf-idf/: index.html
blog/2025/01/20/bm25-explained-a-better-ranking-algorithm-than-tf-idf/: index.html
blog/archive/2024/: index.html
blog/archive/2025/: index.html
blog/category/ai/: index.html
blog/category/information-retrieval/: index.html
blog/category/nlp/: index.html
docs/: about.md  index.md
docs/ai-course/: index.md
docs/ai-course/module-1/: breakdown-of-transformers.md  intro-to-transformers.md  nlp-before-transformers.md
docs/ai-course/module-2/: sample.ipynb
docs/blog/posts/: bm25_explained.md  first_post.md  react_agent_from_scratch.ipynb  react_agent_from_scratch.md  tf_idf_explained.md
notebooks/blog/: react_agent_from_scratch.ipynb
overrides/partials/: comments.html
search/: search_index.json
