[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["Vishwas Gowda <vishwas.g217@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.6.1"
mkdocs-material = {extras = ["imaging"], version = "^9.5.34"}
mkdocs-awesome-pages-plugin = "^2.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
